--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,7 +1,217 @@
+:root {
+  --text-color: #303846;
+  --header-height: 70px;
+  --section-padding: 50px;
+  --section-bg-color: #f7f7f7;
+}
+
 body {
   margin: 0;
   padding: 0;
 
   font-size: 16px;
   font-family: Arial, sans-serif;
+}
+
+.container {
+  width: 1000px;
+  margin: 0 auto;
+}
+
+.text {
+  color: var(--text-color);
+}
+
+.link {
+  font-weight: bold;
+
+  text-decoration: none;
+}
+
+.link:hover {
+  text-decoration: underline;
+}
+
+.btn {
+  padding: 10px;
+
+  color: white;
+  font-weight: bold;
+
+  text-decoration: none;
+
+  background-color: transparent;
+  border: 1px solid white;
+  border-radius: 8px;
+
+  cursor: pointer;
+}
+
+.btn:hover {
+  color: var(--text-color);
+
+  background-color: white;
+}
+
+.form-group {
+  display: flex;
+}
+
+.form-label {
+  min-width: 200px;
+
+  font-weight: bold;
+}
+
+.form-control {
+  min-width: 120px;
+  padding: 5px;
+
+  border: 1px solid #adacac;
+  border-radius: 8px;
+}
+
+.header {
+  position: fixed;
+  top: 0;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+  width: 100%;
+  height: var(--header-height);
+  padding: 0 20px;
+
+  background-color: white;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+}
+
+.logo-img {
+  max-height: 40px;
+  margin-right: 10px;
+}
+
+.menu > * + * {
+  margin-left: 10px;
+}
+
+.main {
+  margin-top: var(--header-height);
+}
+
+.banner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 30px;
+
+  color: white;
+
+  background-image: url("../images/banner.png");
+  background-size: cover;
+}
+
+.banner-img {
+  max-height: 120px;
+}
+
+.banner-title {
+  margin-top: 10px;
+  margin-bottom: 0;
+
+  font-size: 40px;
+}
+
+.banner-description {
+  margin-top: 5px;
+
+  font-weight: bold;
+}
+
+.advantages {
+  display: flex;
+  justify-content: space-between;
+  padding: var(--section-padding) 0;
+}
+
+.advantages > * + * {
+  margin-left: 50px;
+}
+
+.about-wrap {
+  background-color: var(--section-bg-color);
+}
+
+.about {
+  display: flex;
+  box-sizing: border-box;
+  padding: var(--section-padding);
+}
+
+.about-text {
+  margin-right: 100px;
+}
+
+.about-img {
+  max-height: 200px;
+}
+
+.places {
+  display: flex;
+  box-sizing: border-box;
+  padding: var(--section-padding);
+}
+
+.places-img {
+  max-height: 200px;
+  margin-right: 100px;
+}
+
+.btn-form {
+  color: turquoise;
+
+  border-color: turquoise;
+}
+
+.btn-form:hover {
+  color: white;
+
+  background-color: turquoise;
+}
+
+.contact-form-section {
+  background-color: var(--section-bg-color);
+}
+
+.contact-form-wrap {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-sizing: border-box;
+  padding: var(--section-padding);
+}
+
+.contact-form > * + * {
+  margin-top: 20px;
+}
+
+.contact-form-legend {
+  color: turquoise;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.contact-form-fieldset {
+  padding: 20px;
+
+  border: 2px solid turquoise;
+}
+
+.contact-form-fieldset > .form-group + .form-group {
+  margin-top: 10px;
 }
