--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,30 +1,97 @@
+@import "./css-reset.css";
+
 :root {
-  --text-color: #303846;
+  --primary-color: #303846;
+  --secondary-color: turquoise;
+  --light-color: #fff;
+  --dark-color: #f7f7f7;
   --header-height: 70px;
-  --section-padding: 50px;
-  --section-bg-color: #f7f7f7;
+}
+
+.mt-3 {
+  margin-top: 1rem;
+}
+
+.mb-3 {
+  margin-bottom: 1rem;
+}
+
+.ml-4 {
+  margin-top: 1.5rem;
+}
+
+.mr-4 {
+  margin-bottom: 1.5rem;
+}
+
+.h1 {
+  font-size: 2.5rem;
+}
+
+.h5 {
+  font-size: 1.25rem;
+}
+
+.h6 {
+  font-size: 1rem;
+}
+
+.font-weight-bold {
+  font-weight: bold;
 }
 
 body {
-  margin: 0;
-  padding: 0;
-
   font-size: 16px;
   font-family: Arial, sans-serif;
+  line-height: 1.5;
+}
+
+.list {
+  padding-left: 40px;
+
+  list-style: disc;
 }
 
 .container {
-  width: 1000px;
+  box-sizing: border-box;
+  max-width: 1000px;
   margin: 0 auto;
+  padding-right: 15px;
+  padding-left: 15px;
 }
 
-.text {
-  color: var(--text-color);
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.col {
+  flex-grow: 1;
+  max-width: max-content;
+}
+
+.text-primary {
+  color: var(--primary-color);
+}
+
+.text-white {
+  color: var(--light-color);
+}
+
+.bg-dark {
+  background-color: var(--primary-color);
+}
+
+.bg-white {
+  background-color: var(--light-color);
+}
+
+.section-bg-dark {
+  background-color: var(--dark-color);
 }
 
 .link {
   font-weight: bold;
-
   text-decoration: none;
 }
 
@@ -33,24 +100,41 @@ body {
 }
 
 .btn {
+  min-width: 120px;
   padding: 10px;
 
-  color: white;
   font-weight: bold;
-
   text-decoration: none;
 
-  background-color: transparent;
-  border: 1px solid white;
+  border: 1px solid;
   border-radius: 8px;
-
   cursor: pointer;
 }
 
-.btn:hover {
-  color: var(--text-color);
+.btn-default {
+  color: var(--light-color);
 
-  background-color: white;
+  background-color: transparent;
+  border-color: var(--light-color);
+}
+
+.btn-default:hover {
+  color: var(--primary-color);
+
+  background-color: var(--light-color);
+}
+
+.btn-secondary {
+  color: var(--secondary-color);
+
+  background-color: transparent;
+  border-color: var(--secondary-color);
+}
+
+.btn-secondary:hover {
+  color: var(--light-color);
+
+  background-color: var(--secondary-color);
 }
 
 .form-group {
@@ -71,6 +155,42 @@ body {
   border-radius: 8px;
 }
 
+.title {
+  font-weight: bold;
+  font-size: 28px;
+}
+
+.title-small {
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.section {
+  box-sizing: border-box;
+  padding-top: 65px;
+  padding-bottom: 65px;
+}
+
+.justify-content-between {
+  justify-content: space-between;
+}
+
+.justify-content-around {
+  justify-content: space-around;
+}
+
+.justify-content-center {
+  justify-content: center;
+}
+
+.media {
+  display: flex;
+}
+
+.media-body {
+  flex-grow: 1;
+}
+
 .header {
   position: fixed;
   top: 0;
@@ -82,18 +202,6 @@ body {
   width: 100%;
   height: var(--header-height);
   padding: 0 20px;
-
-  background-color: white;
-}
-
-.logo {
-  display: flex;
-  align-items: center;
-}
-
-.logo-img {
-  max-height: 40px;
-  margin-right: 10px;
 }
 
 .menu > * + * {
@@ -104,96 +212,67 @@ body {
   margin-top: var(--header-height);
 }
 
-.banner {
+.logo {
+  display: flex;
+  align-items: center;
+
+  font-size: 18px;
+}
+
+.logo-img {
+  max-height: 40px;
+  margin-right: 10px;
+}
+
+.banner-section {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 30px;
-
-  color: white;
+  padding: 30px 0;
 
   background-image: url("../images/banner.png");
-  background-size: cover;
+  background-position: 30% 65%;
 }
 
 .banner-img {
-  max-height: 120px;
+  max-height: 130px;
 }
 
-.banner-title {
-  margin-top: 10px;
-  margin-bottom: 0;
-
-  font-size: 40px;
+.advantages-item {
+  max-width: 280px;
 }
 
-.banner-description {
-  margin-top: 5px;
-
-  font-weight: bold;
-}
-
-.advantages {
-  display: flex;
-  justify-content: space-between;
-  padding: var(--section-padding) 0;
-}
-
-.advantages > * + * {
-  margin-left: 50px;
-}
-
-.about-wrap {
-  background-color: var(--section-bg-color);
-}
-
-.about {
-  display: flex;
-  box-sizing: border-box;
-  padding: var(--section-padding);
+.about-block {
+  padding-right: 65px;
+  padding-left: 65px;
 }
 
 .about-text {
-  margin-right: 100px;
+  max-width: 500px;
 }
 
 .about-img {
   max-height: 200px;
 }
 
-.places {
-  display: flex;
-  box-sizing: border-box;
-  padding: var(--section-padding);
+.places-text {
+  max-width: 500px;
+  margin-left: auto;
 }
 
 .places-img {
   max-height: 200px;
-  margin-right: 100px;
 }
 
-.btn-form {
-  color: turquoise;
-
-  border-color: turquoise;
+.places-block {
+  padding-right: 65px;
+  padding-left: 65px;
 }
 
-.btn-form:hover {
-  color: white;
-
-  background-color: turquoise;
-}
-
-.contact-form-section {
-  background-color: var(--section-bg-color);
-}
-
-.contact-form-wrap {
+.contact-form-block {
   display: flex;
   flex-direction: column;
   align-items: center;
-  box-sizing: border-box;
-  padding: var(--section-padding);
 }
 
 .contact-form > * + * {
@@ -201,15 +280,14 @@ body {
 }
 
 .contact-form-legend {
-  color: turquoise;
-  font-weight: bold;
+  color: var(--secondary-color);
   font-size: 18px;
 }
 
 .contact-form-fieldset {
   padding: 20px;
 
-  border: 2px solid turquoise;
+  border: 2px solid var(--secondary-color);
 }
 
 .contact-form-fieldset > .form-group + .form-group {
