--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -8,30 +8,6 @@
   --header-height: 70px;
 }
 
-.mb-3 {
-  margin-bottom: 1rem;
-}
-
-.h1 {
-  font-size: 2.5rem;
-}
-
-.font-weight-bold {
-  font-weight: bold;
-}
-
-body {
-  font-size: 16px;
-  font-family: Arial, sans-serif;
-  line-height: 1.5;
-}
-
-.list {
-  padding-left: 40px;
-
-  list-style: disc;
-}
-
 .container {
   box-sizing: border-box;
   max-width: 1000px;
@@ -40,43 +16,7 @@ body {
   padding-bottom: 65px;
 }
 
-.row {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.col {
-  flex-grow: 1;
-  max-width: max-content;
-}
-
-.text-primary {
-  color: var(--primary-color);
-}
-
-.text-white {
-  color: var(--light-color);
-}
-
-.bg-dark {
-  background-color: var(--primary-color);
-}
-
-.bg-gray {
-  background-color: var(--gray-color);
-}
-
-.link {
-  font-weight: bold;
-  text-decoration: none;
-}
-
-.link:hover {
-  text-decoration: underline;
-}
-
 .btn {
-  min-width: 130px;
   padding: 10px;
 
   font-weight: bold;
@@ -114,6 +54,88 @@ body {
   background-color: var(--secondary-color);
 }
 
+.mb-16 {
+  margin-bottom: 16px;
+}
+
+.pt-30 {
+  padding-top: 30px;
+}
+
+.pb-30 {
+  padding-bottom: 30px;
+}
+
+.pr-20 {
+  padding-right: 20px;
+}
+
+.pl-20 {
+  padding-left: 20px;
+}
+
+.mw-130 {
+  max-width: 130px;
+}
+
+.mw-280 {
+  max-width: 280px;
+}
+
+.h1 {
+  font-size: 2.5rem;
+}
+
+.font-weight-bold {
+  font-weight: bold;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  font-size: 16px;
+  font-family: Arial, sans-serif;
+  line-height: 1.5;
+}
+
+.list {
+  padding-left: 40px;
+
+  list-style: disc;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.text-primary {
+  color: var(--primary-color);
+}
+
+.text-white {
+  color: var(--light-color);
+}
+
+.bg-dark {
+  background-color: var(--primary-color);
+}
+
+.bg-gray {
+  background-color: var(--gray-color);
+}
+
+.link {
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.link:hover {
+  text-decoration: underline;
+}
+
 .form-group {
   display: flex;
 }
@@ -142,6 +164,18 @@ body {
   font-size: 18px;
 }
 
+.d-flex {
+  display: flex;
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
+.align-items-center {
+  align-items: center;
+}
+
 .justify-content-between {
   justify-content: space-between;
 }
@@ -167,10 +201,12 @@ body {
   width: 100%;
 }
 
-.header {
+.header-fixed {
   position: fixed;
   top: 0;
+}
 
+.header {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -182,7 +218,7 @@ body {
   background-color: var(--light-color);
 }
 
-.menu > * + * {
+.vertical-menu > * + * {
   margin-left: 10px;
 }
 
@@ -205,27 +241,6 @@ body {
 .top-section-bg {
   background-image: url("../images/banner.png");
   background-position: 30% 65%;
-}
-
-.top-section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 30px 0;
-}
-
-.top-section-logo {
-  max-height: 130px;
-}
-
-.advantages-item {
-  max-width: 280px;
-}
-
-.contact-form-section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 .contact-form > * + * {
