--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -5,7 +5,50 @@
   --secondary-color: turquoise;
   --light-color: #fff;
   --gray-color: #f7f7f7;
-  --header-height: 70px;
+  --header-height: 60px;
+}
+
+h1 {
+  margin-top: 0;
+  margin-bottom: 0;
+
+  font-size: 3em;
+}
+
+h2 {
+  margin-top: 0;
+  margin-bottom: 0.5em;
+
+  font-weight: bold;
+  font-size: 1.8em;
+}
+
+h3 {
+  font-weight: bold;
+  font-size: 1.2em;
+}
+
+.font-weight-bold {
+  font-weight: bold;
+}
+
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: var(--header-height);
+}
+
+body {
+  font-size: 16px;
+  font-family: Arial, sans-serif;
+  line-height: 1.5;
+}
+
+p {
+  margin-bottom: 20px;
+}
+
+main {
+  margin-top: var(--header-height);
 }
 
 .container {
@@ -58,10 +101,6 @@
   margin-bottom: 16px;
 }
 
-.mt-20 {
-  margin-top: 20px;
-}
-
 .pr-20 {
   padding-right: 20px;
 }
@@ -74,55 +113,26 @@
   max-width: 130px;
 }
 
-.mw-280 {
-  max-width: 280px;
-}
-
 .mh-210 {
   max-height: 210px;
+}
+
+.flex-grow-1 {
+  flex-grow: 1;
+}
+
+.flex-basis-280 {
+  flex-basis: 280px;
 }
 
 .flex-basis-500 {
   flex-basis: 500px;
 }
 
-h1 {
-  font-size: 2.5rem;
-}
-
-h2 {
-  font-weight: bold;
-  font-size: 28px;
-}
-
-h3 {
-  font-weight: bold;
-  font-size: 18px;
-}
-
-.font-weight-bold {
-  font-weight: bold;
-}
-
-html {
-  scroll-behavior: smooth;
-}
-
-body {
-  font-size: 16px;
-  font-family: Arial, sans-serif;
-  line-height: 1.5;
-}
-
 .list {
   padding-left: 40px;
 
   list-style: disc;
-}
-
-.row {
-  display: flex;
-  flex-wrap: wrap;
 }
 
 .text-primary {
@@ -156,13 +166,14 @@ body {
 }
 
 .form-label {
-  min-width: 200px;
+  flex: 1 1 180px;
 
   font-weight: bold;
 }
 
 .form-control {
-  min-width: 120px;
+  flex: 1 1 200px;
+  box-sizing: border-box;
   padding: 5px;
 
   border: 1px solid #adacac;
@@ -171,6 +182,10 @@ body {
 
 .d-flex {
   display: flex;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
 }
 
 .flex-column {
@@ -187,6 +202,11 @@ body {
 
 .justify-content-around {
   justify-content: space-around;
+}
+
+.contact-form {
+  width: 100%;
+  max-width: 460px;
 }
 
 .contact-form > * + * {
@@ -215,22 +235,19 @@ body {
 
 .header {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
   box-sizing: border-box;
   width: 100%;
   height: var(--header-height);
-  padding: 0 20px;
+  padding: 5px 20px;
 
   background-color: var(--light-color);
 }
 
-.vertical-menu > * + * {
+.horizontal-menu > * + * {
   margin-left: 10px;
-}
-
-.main {
-  margin-top: var(--header-height);
 }
 
 .logo {
@@ -245,7 +262,34 @@ body {
   margin-right: 10px;
 }
 
-.top-section-bg {
+.moon-bg {
   background-image: url("../images/banner.png");
   background-position: 30% 65%;
+}
+
+@media screen and (max-width: 375px) {
+  h1 {
+    font-size: 2.2em;
+  }
+
+  :root {
+    --header-height: 100px;
+  }
+
+  .header-fixed {
+    position: absolute;
+  }
+
+  .container {
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+
+  .form-control {
+    flex-basis: 110px;
+  }
+
+  html {
+    scroll-padding-top: 0;
+  }
 }
